--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ chrono = { version = "0.4.42", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde_urlencoded = "0.7.1"
-
-jwt = "0.16.0"
-reqwest = { version = "0.12.26", features = ["stream", "json", "multipart"] }
+isahc = { version = "1.7.2", features = ["text-decoding"] }
+url = "2.5.7"
+futures-lite = "2.6.1"
+http-client-multipart = "0.1.2"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
