--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ url = "2.5.7"
 futures-lite = "2.6.1"
 http-client-multipart = "0.1.2"
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
+
+[features]
+example = ["dep:tokio"]
