--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,12 @@ chrono = { version = "0.4.42", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde_urlencoded = "0.7.1"
-isahc = { version = "1.7.2", features = ["text-decoding"] }
 url = "2.5.7"
-futures-lite = "2.6.1"
-http-client-multipart = "0.1.2"
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
-tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
+tokio = { version = "1.48.0", features = ["fs"] }
+reqwest = { version = "0.12.28", features = ["multipart", "json", "stream"] }
+mime_to_ext = "0.1.12"
+tokio-util = { version = "0.7.17", features = ["codec"] }
 
 [features]
-example = ["dep:tokio"]
+example = ["tokio/macros","tokio/rt-multi-thread"]
